# gauss_elimination

./: .gitignore  LICENSE  README.md  congruence.py  gauss.py  main.py  probabilita.py  pyproject.toml  testCongruence.py  testGauss.py  tests.py  tui.py
java/: Main.java  Matrix.java
