[tool.poetry]
name = "gauss-elimination"
version = "0.1.0"
description = "Python Gauss Elimination Algorithm for matrices"
authors = ["Luca Sforza <lucasforza1234@icloud.com>","Filippo Onofri <filippo.onofri46@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gauss_elimination"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
